# PhotoApp

./: README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
config/: default.yaml  user.yaml
scripts/: benchmark_faces.py  init_db.py  migrate_db.py
src/core/: clustering.py  config.py  db.py  exif.py  faces.py  hashing.py  image_io.py  models.py  search.py  thumbnails.py  utils.py
src/services/: backup.py  face_indexer.py  indexer.py  jobs.py  people_service.py  scanner.py
src/tests/: test_clustering.py  test_db_models.py  test_exif.py  test_faces.py  test_hashing.py
src/ui/: library_view.py  main_window.py  maintenance_dialogs.py  people_view.py  photo_view.py  settings_dialog.py  tags_albums_view.py
src/ui/widgets/: filter_bar.py  folder_tree.py  people_list.py  thumbnail_grid.py
